# Release-Note-Aggregator

./: .gitignore  Cargo.toml  README.md  USAGE.md
.github/workflows/: release.yml
src/: helpers.rs  main.rs  tests.rs
