[package]
name = "ghnotes"
version = "0.1.0"
edition = "2021"
authors = ["Tristan J. Poland"]
description = "A CLI tool to aggregate GitHub release notes between versions"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8"
chrono = "0.4"
anyhow = "1.0"